<resources>
    <string name="app_name">Landmarks</string>
    <string name="app_name1">Landmark</string>
    <string name="default_location">Fetching Location</string>
    <string name="default_temp">NA</string>
    <string name="change_city_description">Click Here to enter Camera Mode</string>
    <string name="weather_description">This is the weather symbol</string>
    <string name="back_button_description">Dismiss Change City Screen</string>
    <string name="get_weather">Change City</string>
    <string name="taken_photo">The taken photo</string>
    <string name="default_query">Enter city name</string>
    <string name="coordinates">Coordinates</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
</resources>
