<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:background="@drawable/landmark_background"
    tools:context="com.example.android.tflitecamerademo.Start">


    <TextView
        android:id="@+id/locationTV"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginBottom="73dp"
        android:text="@string/default_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="19dp"
        android:text="@string/coordinates"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tempTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toCameraButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="90sp" />

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="5dp"
        android:text="@string/latitude"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitudeTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/longitude"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/toCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="@null"
        android:contentDescription="@string/change_city_description"
        android:src="@drawable/change_city_symbol_small" />

    <FrameLayout
        android:layout_width="379dp"
        android:layout_height="447dp"
        android:layout_above="@+id/locationTV"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp">

        <ImageView
            android:id="@+id/weatherSymbolIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/weather_description"
            android:src="@drawable/dunno"

            />
    </FrameLayout>

</RelativeLayout>
