<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:background="@drawable/landmark_background"
    tools:context="com.example.android.tflitecamerademo.WeatherController">


    <TextView
        android:id="@+id/locationTV"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="26dp"
        android:text="@string/default_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="19dp"
        android:text="@string/coordinates"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tempTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toCameraButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="90sp" />

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="5dp"
        android:text="@string/latitude"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitudeTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/longitude"
        android:textSize="24sp" />

    <FrameLayout
        android:layout_width="295dp"
        android:layout_height="324dp"
        android:layout_above="@+id/locationTV"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp">

        <ImageView
            android:id="@+id/weatherSymbolIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/weather_description"
            android:src="@drawable/dunno"

            />
    </FrameLayout>

    <ImageButton
        android:id="@+id/changeStartButton"
        android:layout_width="76dp"
        android:layout_height="37dp"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/longitudeTextView"
        android:background="@null"
        app:srcCompat="@drawable/left" />

    <ImageButton
        android:id="@+id/toMapsButton"
        android:layout_width="68dp"
        android:layout_height="86dp"
        android:layout_below="@+id/changeStartButton"
        android:layout_alignStart="@+id/changeStartButton"
        android:layout_marginStart="1dp"
        android:background="@null"
        app:srcCompat="@android:drawable/ic_dialog_map" />

</RelativeLayout>
